--- a/back-end/front-end/public/index.html
+++ b/back-end/front-end/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" />
     <meta name="theme-color" content="#000000" />
 
-    <title>React App</title>
+    <title>SABAH</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
